force-app/main/default/objects/Contact_Junction__c/Contact_Junction__c.object-meta.xml
<CustomObject>
    <label>Related Contact</label>
    <nameField>
        <displayFormat>CJ-{00000}</displayFormat>
        <label>Related Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>