force-app/main/default/objects/Contact_Junction__c/fields/CC_d__c.field-meta.xml
<CustomField>
    <fullName>CC_d__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecting this box ensures this person is copied on event invitations and other event emails. Only two POC relationships per contact can be selected for CC.</inlineHelpText>
    <label>CC</label>
    <type>Checkbox</type>
</CustomField>