force-app/main/default/objects/Contact_Junction__c/fields/Child_Contact__c.field-meta.xml
<CustomField>
    <fullName>Child_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>