force-app/main/default/objects/Contact_Junction__c/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>