force-app/main/default/objects/Contact_Junction__c/fields/Dietary_Restrictions_fmla__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.Dietary_Restrictions__c, Dietary_Restrictions__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dietary Restrictions*</label>
    <type>Text</type>
</CustomField>