force-app/main/default/objects/Contact_Junction__c/fields/Email_fmla__c.field-meta.xml
<CustomField>
    <fullName>Email_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.Email, Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email*</label>
    <type>Text</type>
</CustomField>