force-app/main/default/objects/Contact_Junction__c/fields/Fax_fmla__c.field-meta.xml
<CustomField>
    <fullName>Fax_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.Fax, Fax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax*</label>
    <type>Text</type>
</CustomField>