force-app/main/default/objects/Contact_Junction__c/fields/FirstName_fmla__c.field-meta.xml
<CustomField>
    <fullName>FirstName_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.FirstName, FirstName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name*</label>
    <type>Text</type>
</CustomField>