force-app/main/default/objects/Contact_Junction__c/fields/Formal_Name__c.field-meta.xml
<CustomField>
    <fullName>Formal_Name__c</fullName>
    <label>Formal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>