force-app/main/default/objects/Contact_Junction__c/fields/FormalName_fmla__c.field-meta.xml
<CustomField>
    <fullName>FormalName_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.Formal_Name__c, Formal_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formal Name*</label>
    <type>Text</type>
</CustomField>