force-app/main/default/objects/Contact_Junction__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>40</length>
    <type>Text</type>
</CustomField>