force-app/main/default/objects/Contact_Junction__c/fields/LastName_fmla__c.field-meta.xml
<CustomField>
    <fullName>LastName_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.LastName, LastName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>