force-app/main/default/objects/Contact_Junction__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Legacy ID - used for imports from CMD/eContact</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>