force-app/main/default/objects/Contact_Junction__c/fields/Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Name__c</fullName>
    <label>Local Formal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>