force-app/main/default/objects/Contact_Junction__c/fields/Phone_fmla__c.field-meta.xml
<CustomField>
    <fullName>Phone_fmla__c</fullName>
    <formula>IF(Child_Contact__c != NULL, Child_Contact__r.Phone, Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone*</label>
    <type>Text</type>
</CustomField>