force-app/main/default/objects/Contact_Junction__c/fields/Salutation_fmla__c.field-meta.xml
<CustomField>
    <fullName>Salutation_fmla__c</fullName>
    <formula>IF(Child_Contact__c != null, TEXT(Child_Contact__r.Salutation), Salutation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation*</label>
    <type>Text</type>
</CustomField>