force-app/main/default/objects/Contact_Junction__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>